package model;

public enum TipoUsuario {
    PREMIUM,
    FREE
}
