package service;

import model.Usuario;

public interface IServicioDescarga {
    String descargar(Usuario usuario);
}
